--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
@@ -34,7 +35,8 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
-    "postcss-pxtorem": "^6.0.0"
+    "postcss": "^8.3.6",
+    "postcss-pxtorem": "^5.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
