--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
+    "json-bigint": "^1.0.0",
+    "lodash": "^4.17.21",
     "vant": "^3.2.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
